# myfastapi-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: .copilot-ignore  copilot-instructions
docs/: architecture.md  behaviors.md  cli_commands.md  plugins.md
src/: __init__.py  cli.py
src/plugins/: __init__.py
src/templates/layered/: README.md  requirements.txt
src/templates/layered/app/: __init__.py  main.py
src/templates/layered/app/application/: __init__.py
src/templates/layered/app/application/authentication/services/: __init__.py  auth_service.py
src/templates/layered/app/application/common/: __init__.py  cqrs.py
src/templates/layered/app/application/common/interfaces/: __init__.py
src/templates/layered/app/application/common/models/: result_model.py
src/templates/layered/app/core/: __init__.py  config.py  di.py  exceptions.py  logging.py  security.py
src/templates/layered/app/domain/entities/: user.py
src/templates/layered/app/domain/value_objects/: email.py
src/templates/layered/app/infrastructure/: __init__.py
src/templates/layered/app/infrastructure/db/: __init__.py  session.py
src/templates/layered/app/infrastructure/repositories/: user_repository.py
src/templates/layered/app/presentation/: __init__.py
src/templates/layered/app/presentation/api/routers/: __init__.py  auth.py
src/templates/layered/app/presentation/api/utils/: result_adapter.py
src/templates/modular/: README.md
src/templates/modular/app/: __init__.py  main.py
tests/: test_cli_new.py  test_generate_crud_async.py
